autoload classmap and config file

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "autoload":{
+        "classmap":[
+            "app/core"
+        ],
+        "files":[
+            "app/config/config.php"
+        ]
+    },
     "require": {
         "twig/twig": "^1.24"
     }
